<resources>
    <string name="app_name">WMAD Assignment 2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="register">Register</string>
    <string name="forename">Forename:</string>
    <string name="surname">Surname:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="address_line_1">Address Line 1:</string>
    <string name="address_line_2">Address Line 2:</string>
    <string name="postcode">Postcode:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="re_enter_password">Re-enter password:</string>
    <string name="loginAsAdmin">Log in as admin?</string>
    <string name="login">Login</string>
    <string name="new_password">New Password</string>
    <string name="number_of_seats">Number of seats:</string>
    <string name="time_of_showing">Time of showing:</string>
</resources>
